// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationsGenerator with  batches generates operations by one for given batch 1`] = `
Object {
  "operations": Array [
    "add",
    "add",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator with  batches generates operations by one for given batch 2`] = `
Object {
  "operations": Array [
    "add",
    "add",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;

exports[`OperationsGenerator with  batches generates operations by one for given batch 3`] = `
Object {
  "operations": Array [
    "add",
    "subtract",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator with  batches generates operations by one for given batch 4`] = `
Object {
  "operations": Array [
    "add",
    "subtract",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;

exports[`OperationsGenerator with  batches generates operations by one for given batch 5`] = `
Object {
  "operations": Array [
    "subtract",
    "subtract",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator with  batches generates operations by one for given batch 6`] = `
Object {
  "operations": Array [
    "subtract",
    "subtract",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 1`] = `
Object {
  "operations": Array [
    "add",
    "add",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 2`] = `
Object {
  "operations": Array [
    "add",
    "add",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 3`] = `
Object {
  "operations": Array [
    "add",
    "subtract",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 4`] = `
Object {
  "operations": Array [
    "add",
    "subtract",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 5`] = `
Object {
  "operations": Array [
    "subtract",
    "add",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 6`] = `
Object {
  "operations": Array [
    "subtract",
    "add",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 7`] = `
Object {
  "operations": Array [
    "subtract",
    "subtract",
  ],
  "priorities": Array [
    0,
    1,
  ],
}
`;

exports[`OperationsGenerator without batches generates operations by one 8`] = `
Object {
  "operations": Array [
    "subtract",
    "subtract",
  ],
  "priorities": Array [
    1,
    0,
  ],
}
`;
